// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation renders correctly - navigation bottom center 1`] = `
<div>
  <button
    className="css-0"
    id="nav-link"
    onClick={[Function]}
  >
    <span
      className="css-1f55rt2"
      title="Toggle Menu"
    >
      <svg
        className="css-xxjuk1"
        fill="currentcolor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="1.23"
          width="20"
        />
        <rect
          height="1.23"
          width="20"
          y="8"
        />
        <rect
          height="1.23"
          width="20"
          y="16"
        />
      </svg>
    </span>
  </button>
  <div
    className="horizontal-align-center vertical-align-bottom css-1gl1ukg"
    id="menu"
  >
    <button
      className="css-0"
      id="nav-close"
      onClick={[Function]}
    >
      <span
        className="css-hzp8v1"
        title="Close Menu"
      >
        <svg
          className="css-xxjuk1"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            points="13.37 0.71 12.66 0 6.68 5.98 0.71 0 0 0.71 5.98 6.68 0 12.66 0.71 13.37 6.68 7.39 12.66 13.37 13.37 12.66 7.39 6.68 13.37 0.71"
          />
        </svg>
      </span>
    </button>
    <nav>
      <ul
        className="css-0"
      >
        <li>
          <Link
            activeClassName="active"
            className="css-0"
            title="Title"
            to="#"
          >
            Menu Entry 1
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            className="css-0"
            target="Target"
            to="#"
          >
            Menu Entry 2
          </Link>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Navigation renders correctly - navigation center center 1`] = `
<div>
  <button
    className="css-0"
    id="nav-link"
    onClick={[Function]}
  >
    <span
      className="css-1f55rt2"
      title="Toggle Menu"
    >
      <svg
        className="css-xxjuk1"
        fill="currentcolor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="1.23"
          width="20"
        />
        <rect
          height="1.23"
          width="20"
          y="8"
        />
        <rect
          height="1.23"
          width="20"
          y="16"
        />
      </svg>
    </span>
  </button>
  <div
    className="horizontal-align-center vertical-align-center css-1gl1ukg"
    id="menu"
  >
    <button
      className="css-0"
      id="nav-close"
      onClick={[Function]}
    >
      <span
        className="css-hzp8v1"
        title="Close Menu"
      >
        <svg
          className="css-xxjuk1"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            points="13.37 0.71 12.66 0 6.68 5.98 0.71 0 0 0.71 5.98 6.68 0 12.66 0.71 13.37 6.68 7.39 12.66 13.37 13.37 12.66 7.39 6.68 13.37 0.71"
          />
        </svg>
      </span>
    </button>
    <nav>
      <ul
        className="css-0"
      >
        <li>
          <Link
            activeClassName="active"
            className="css-0"
            title="Title"
            to="#"
          >
            Menu Entry 1
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            className="css-0"
            target="Target"
            to="#"
          >
            Menu Entry 2
          </Link>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Navigation renders correctly - navigation center left 1`] = `
<div>
  <button
    className="css-0"
    id="nav-link"
    onClick={[Function]}
  >
    <span
      className="css-1f55rt2"
      title="Toggle Menu"
    >
      <svg
        className="css-xxjuk1"
        fill="currentcolor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="1.23"
          width="20"
        />
        <rect
          height="1.23"
          width="20"
          y="8"
        />
        <rect
          height="1.23"
          width="20"
          y="16"
        />
      </svg>
    </span>
  </button>
  <div
    className="horizontal-align-left vertical-align-center css-1gl1ukg"
    id="menu"
  >
    <button
      className="css-0"
      id="nav-close"
      onClick={[Function]}
    >
      <span
        className="css-hzp8v1"
        title="Close Menu"
      >
        <svg
          className="css-xxjuk1"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            points="13.37 0.71 12.66 0 6.68 5.98 0.71 0 0 0.71 5.98 6.68 0 12.66 0.71 13.37 6.68 7.39 12.66 13.37 13.37 12.66 7.39 6.68 13.37 0.71"
          />
        </svg>
      </span>
    </button>
    <nav>
      <ul
        className="css-0"
      >
        <li>
          <Link
            activeClassName="active"
            className="css-0"
            title="Title"
            to="#"
          >
            Menu Entry 1
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            className="css-0"
            target="Target"
            to="#"
          >
            Menu Entry 2
          </Link>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Navigation renders correctly - navigation center right 1`] = `
<div>
  <button
    className="css-0"
    id="nav-link"
    onClick={[Function]}
  >
    <span
      className="css-1f55rt2"
      title="Toggle Menu"
    >
      <svg
        className="css-xxjuk1"
        fill="currentcolor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="1.23"
          width="20"
        />
        <rect
          height="1.23"
          width="20"
          y="8"
        />
        <rect
          height="1.23"
          width="20"
          y="16"
        />
      </svg>
    </span>
  </button>
  <div
    className="horizontal-align-right vertical-align-center css-1gl1ukg"
    id="menu"
  >
    <button
      className="css-0"
      id="nav-close"
      onClick={[Function]}
    >
      <span
        className="css-hzp8v1"
        title="Close Menu"
      >
        <svg
          className="css-xxjuk1"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            points="13.37 0.71 12.66 0 6.68 5.98 0.71 0 0 0.71 5.98 6.68 0 12.66 0.71 13.37 6.68 7.39 12.66 13.37 13.37 12.66 7.39 6.68 13.37 0.71"
          />
        </svg>
      </span>
    </button>
    <nav>
      <ul
        className="css-0"
      >
        <li>
          <Link
            activeClassName="active"
            className="css-0"
            title="Title"
            to="#"
          >
            Menu Entry 1
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            className="css-0"
            target="Target"
            to="#"
          >
            Menu Entry 2
          </Link>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Navigation renders correctly - navigation top center 1`] = `
<div>
  <button
    className="css-0"
    id="nav-link"
    onClick={[Function]}
  >
    <span
      className="css-1f55rt2"
      title="Toggle Menu"
    >
      <svg
        className="css-xxjuk1"
        fill="currentcolor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="1.23"
          width="20"
        />
        <rect
          height="1.23"
          width="20"
          y="8"
        />
        <rect
          height="1.23"
          width="20"
          y="16"
        />
      </svg>
    </span>
  </button>
  <div
    className="horizontal-align-center vertical-align-top css-1gl1ukg"
    id="menu"
  >
    <button
      className="css-0"
      id="nav-close"
      onClick={[Function]}
    >
      <span
        className="css-hzp8v1"
        title="Close Menu"
      >
        <svg
          className="css-xxjuk1"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            points="13.37 0.71 12.66 0 6.68 5.98 0.71 0 0 0.71 5.98 6.68 0 12.66 0.71 13.37 6.68 7.39 12.66 13.37 13.37 12.66 7.39 6.68 13.37 0.71"
          />
        </svg>
      </span>
    </button>
    <nav>
      <ul
        className="css-0"
      >
        <li>
          <Link
            activeClassName="active"
            className="css-0"
            title="Title"
            to="#"
          >
            Menu Entry 1
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            className="css-0"
            target="Target"
            to="#"
          >
            Menu Entry 2
          </Link>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;
